@@ -16,9 +16,8 @@
 
 package com.badlogic.gdx.graphics.glutils;
 
-import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.Application.ApplicationType;
-import com.badlogic.gdx.graphics.Pixmap;
+import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.Texture.TextureFilter;
 import com.badlogic.gdx.graphics.Texture.TextureWrap;
@@ -37,15 +36,21 @@ public class FloatFrameBuffer extends FrameBuffer {
 		super(null, width, height, hasDepth);
 	}
 
-	/** Override this method in a derived class to set up the backing texture as you like. */
-	protected void setupTexture () {
+	@Override
+	protected Texture createColorTexture () {
 		FloatTextureData data = new FloatTextureData(width, height);
-		colorTexture = new Texture(data);
+		Texture result = new Texture(data);
 		if (Gdx.app.getType() == ApplicationType.Desktop || Gdx.app.getType() == ApplicationType.Applet)
-			colorTexture.setFilter(TextureFilter.Linear, TextureFilter.Linear);
+			result.setFilter(TextureFilter.Linear, TextureFilter.Linear);
 		else
 			// no filtering for float textures in OpenGL ES
-			colorTexture.setFilter(TextureFilter.Nearest, TextureFilter.Nearest);
-		colorTexture.setWrap(TextureWrap.ClampToEdge, TextureWrap.ClampToEdge);
+			result.setFilter(TextureFilter.Nearest, TextureFilter.Nearest);
+		result.setWrap(TextureWrap.ClampToEdge, TextureWrap.ClampToEdge);
+		return result;
+	}
+	
+	@Override
+	protected void disposeColorTexture (Texture colorTexture) {
+		colorTexture.dispose();
 	}
 }
