@@ -3,6 +3,7 @@
 - Made possible to use any actor for tooltips.
 - Improved cross-platform reflection api for annotations.
 - NinePatch#scale now also scales middle patch size.
+- GLFrameBuffer is now abstract, renamed setupTexture to createColorTexture, added disposeColorTexture
 
 [1.6.4]
 - TextField cursor and selection size changed. https://github.com/libgdx/libgdx/commit/2a830dea348948d2a37bd8f6338af2023fec9b09
